<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_files"
    style="@style/ContentFrameStyle">

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
 	<Button
        android:id="@+id/getFiles"
       android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/get_files" 
		style="?android:attr/buttonStyleSmall" />
 	
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
 	<Button
        android:id="@+id/addFile"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/add_file" 
        style="?android:attr/buttonStyleSmall" />
 	    
    <Button
        android:id="@+id/getFile"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/get_file"
        style="?android:attr/buttonStyleSmall" />
    
   <Button
        android:id="@+id/deleteFile"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/delete_file" 
		style="?android:attr/buttonStyleSmall" />

</LinearLayout>